[gd_scene load_steps=2 format=3 uid="uid://dm0odku2uau7i"]

[ext_resource type="Script" path="res://Inventory_System/Scripts/item_grid_cell.gd" id="1_xhdko"]

[node name="Item_grid_cell" type="PanelContainer"]
texture_filter = 1
custom_minimum_size = Vector2(52, 52)
offset_right = 52.0
offset_bottom = 52.0
script = ExtResource("1_xhdko")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_filter = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
